fix(stylesheets): add whitespace: pre-line for a proper post display

--- a/staticfiles/sass/news/_news-detail.scss
+++ b/staticfiles/sass/news/_news-detail.scss
@@ -18,6 +18,10 @@
       0 100px 80px rgba(0, 0, 0, 0.12);
     }
 
+    .card-text {
+      white-space: pre-line;
+    }
+
     .btn {
       margin-bottom: 170px;
     }
