--- a/staticfiles/sass/news/_news-list.scss
+++ b/staticfiles/sass/news/_news-list.scss
@@ -35,6 +35,9 @@
       &-pinned {
         border: 2px solid $danger !important;
       }
+      &-text {
+        white-space: pre-line;
+      }
     }
 
     .thumbtack {
